[gd_scene load_steps=7 format=3 uid="uid://uu5um6204y4i"]

[ext_resource type="AudioStream" uid="uid://d7sviw4hohr8" path="res://Audio/hotel-bell-ding-1-174457.mp3" id="1_u3wns"]
[ext_resource type="Script" path="res://Scripts/Soundtracker.gd" id="2_cp2b7"]
[ext_resource type="AudioStream" uid="uid://dlbckrhuypeig" path="res://Audio/decidemp3-14575.mp3" id="3_au2hh"]
[ext_resource type="AudioStream" uid="uid://c0lsplpc2xuas" path="res://Audio/ping-82822 (1).mp3" id="4_bt8pb"]
[ext_resource type="AudioStream" uid="uid://bv3ftmi1xs7pg" path="res://typical-trap-loop-140bpm-129880.mp3" id="5_2jaqm"]
[ext_resource type="AudioStream" uid="uid://7vao48megnni" path="res://sunflower-street-drumloop-85bpm-163900.mp3" id="6_y0bpj"]

[node name="Node2D" type="Node2D"]

[node name="MarginContainer2" type="MarginContainer" parent="."]
offset_left = 638.0
offset_top = 111.0
offset_right = 678.0
offset_bottom = 151.0
scale = Vector2(11.2322, 7.20814)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
max_value = 10.0
step = 0.01
value = 10.0

[node name="HSlider2" type="HSlider" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
max_value = 2.0
step = 0.0
value = 2.0

[node name="CheckButton" type="CheckButton" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 92.0
offset_top = 141.0
offset_right = 132.0
offset_bottom = 205.0
scale = Vector2(12.2663, 7.83941)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button5" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MarginContainer"]
stream = ExtResource("1_u3wns")
script = ExtResource("2_cp2b7")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="MarginContainer"]
stream = ExtResource("3_au2hh")
script = ExtResource("2_cp2b7")

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="MarginContainer"]
stream = ExtResource("4_bt8pb")
script = ExtResource("2_cp2b7")

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="MarginContainer"]
stream = ExtResource("5_2jaqm")
script = ExtResource("2_cp2b7")

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="MarginContainer"]
stream = ExtResource("6_y0bpj")
script = ExtResource("2_cp2b7")

[connection signal="drag_ended" from="MarginContainer2/VBoxContainer/HSlider" to="MarginContainer/AudioStreamPlayer4" method="_on_h_slider_drag_ended"]
[connection signal="drag_started" from="MarginContainer2/VBoxContainer/HSlider" to="MarginContainer/AudioStreamPlayer4" method="_on_h_slider_drag_started"]
[connection signal="value_changed" from="MarginContainer2/VBoxContainer/HSlider" to="MarginContainer/AudioStreamPlayer4" method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer2/VBoxContainer/HSlider2" to="MarginContainer/AudioStreamPlayer4" method="_on_h_slider_2_value_changed"]
[connection signal="button_down" from="MarginContainer2/VBoxContainer/CheckButton" to="MarginContainer/AudioStreamPlayer5" method="_on_check_button_button_down"]
[connection signal="toggled" from="MarginContainer2/VBoxContainer/CheckButton" to="MarginContainer/AudioStreamPlayer5" method="_on_check_button_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="MarginContainer/AudioStreamPlayer" method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button2" to="MarginContainer/AudioStreamPlayer2" method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button3" to="MarginContainer/AudioStreamPlayer3" method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button4" to="MarginContainer/AudioStreamPlayer4" method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button5" to="MarginContainer/AudioStreamPlayer5" method="_on_button_5_pressed"]
